unix/lang/tests/error/missing_until_in_library.yab
#expect#---Error in missing_until.yab, line 7: repeat-loop
import library3e

until (x>10)
